# hc-backend

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci-cd.yml
app/: docker-compose.yml  main.py
app/api/v1/: router.py
app/api/v1/endpoints/: analytics.py  auth.py  branches.py  configs.py  employees.py  operations.py  system.py  transactions.py
app/core/: config.py  exceptions.py  security.py
app/db/: database.py  supabase.py
app/schemas/: analytics.py  auth.py  employee.py  ops.py  system.py  transaction.py
app/services/: analytics_service.py  auth_service.py  dispatch_service.py  email_service.py  employee_service.py  ops_service.py  scanner_service.py  system_service.py
app/utils/: formatter.py  geo_calc.py  timezone_helpers.py
supabase/: config.toml
supabase/migrations/: 20260522093010_remote_schema.sql
tests/: conftest.py  test_main.py  test_utils.py
