[tool.poetry]
name = "homs-backend"
version = "1.0.0"
description = "Homecare Management System API - Silicon Valley Standard"
authors = ["Eep Ridwan <erpauji.medic@gmail.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
pydantic = "^2.5.3"
pydantic-settings = "^2.1.0"
supabase = "^2.3.4"
redis = "^4.6.0"
fastapi-cache2 = {extras = ["redis"], version = "^0.2.1"}
slowapi = "^0.1.4"
sentry-sdk = "^1.39.1"
cryptography = "^41.0.7"
geopy = "^2.4.1"
phonenumbers = "^8.13.27"
firebase-admin = "^6.4.0"
pandas = "^2.1.4"
openpyxl = "^3.1.2"
aiosmtplib = "^3.0.1"
httpx = "^0.26.0"
zxing-cpp = "^2.2.0"
opencv-python-headless = "^4.9.0.80"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.23.3"
ruff = "^0.1.14"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# --- RUFF CONFIGURATION (LINTER & FORMATTER) ---
[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
ignore = [
    "E501", # Ignore line length violations (let formatter handle it)
]

# --- MYPY CONFIGURATION (STATIC TYPE CHECKING) ---
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
disallow_untyped_defs = false